--- a/ota_server/Dockerfile
+++ b/ota_server/Dockerfile
@@ -6,13 +6,13 @@ FROM python:3.9.5-slim-buster
 WORKDIR /usr/src/app
 
 # set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt /usr/src/app/requirements.txt
-RUN pip install -r requirements.txt
+COPY ota_server/requirements.txt /usr/src/app/requirements.txt
+RUN pip install -r /usr/src/app/requirements.txt
 
 # copy project
-COPY . /usr/src/app/
+COPY ota_server/app /usr/src/app
