--- a/ota_server/requirements.txt
+++ b/ota_server/requirements.txt
@@ -1,7 +1,9 @@
-Flask==2.0.2
+blinker==1.9.0
+click==8.1.8
+Flask==3.1.0
 gunicorn==23.0.0
-click==8.0.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe>=2.0.1
-Werkzeug==2.2.3
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==24.2
+Werkzeug==3.1.3
