--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build docker image
-        run: docker build . --file ota_server/Dockerfile --tag linka-ota-server:$(date +%s)
+        run: docker build ./ota_server --file ota_server/Dockerfile --tag linka-ota-server:$(date +%s)
